# Sign-to-Text-using-Kedro

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_data_processing.yml  parameters_model_prediction.yml  parameters_train_model.yml
src/CustomDatasets/: testing_data.py  training_data.py
src/sign_to_text_conversion/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/sign_to_text_conversion/pipelines/build_model/: __init__.py  nodes.py  pipeline.py
src/sign_to_text_conversion/pipelines/model_prediction/: __init__.py  nodes.py  pipeline.py
src/sign_to_text_conversion/pipelines/train_model/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_processing/: test_pipeline.py
tests/pipelines/model_prediction/: test_pipeline.py
tests/pipelines/train_model/: test_pipeline.py
