[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "sign_to_text_conversion"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
sign-to-text-conversion = "sign_to_text_conversion.__main__:main"

[tool.kedro]
package_name = "sign_to_text_conversion"
project_name = "sign_to_text_conversion"
kedro_init_version = "0.19.8"
tools = [ "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "sign_to_text_conversion.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "dc72b219d26042138fd58cd92ec4db14"
